[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
#version_file = "locutus/_version.py"

[project]
name = "locutus"
authors = [
    {name = "Eric Torstenson", email="eric.s.torstenson@vumc.org"}
]
description = "Research terminology management system."
readme = "README.md"
requires-python = ">=3.13"
keywords = ["Vocabulary", "Research Data", "Borg"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["marshmallow",
                "flask",
                "flask-cors",
                "flask-restful",
                "flask-session",
                "nanoid",
                "PyYAML",
                "rich",
                "search-dragon@git+https://github.com/NIH-NCPI/search-dragon.git",
                "firebase-admin",
                "pymongo"
                ]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)


#[project.scripts]
#asdf = "locutus.module:function"

[tool.pytest.ini_options]
env = [
    "MONGO_URI=mongodb://localhost:27017/test",
]