[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true


[project]
name = "locutus"
authors = [
    {name = "Eric Torstenson", email="eric.s.torstenson@vumc.org"}
]
description = "Research terminology management system."
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
keywords = ["Vocabulary", "Research Data", "Borg"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["marshmallow",
                "flask",
                "flask-cors",
                "flask-restful",
                "flask-session",
                "nanoid",
                "PyYAML",
                "rich",
                "search-dragon@git+https://github.com/NIH-NCPI/search-dragon.git",
                "firebase-admin",
                "pymongo"
                ]
[dependency-groups]
    dev = ["pytest"]

[project.optional-dependencies]
dev = [
    "rich",
    "pytest",
    "pytest-env"
]
cloud = [
    "python-json-logger", # Only installed when explicitly requested
]

[tool.setuptools_scm]
version_file = "src/locutus/_version.py"


[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)


#[project.scripts]
#asdf = "locutus.module:function"

[tool.pytest.ini_options]
testpaths = ["src/locutus/tests"]
# addopts = "-x"
markers = [
    "first: run this test before others"
]

[tool.pytest_env]
MONGO_URIs = { value = "mongodb://localhost:27017/test", skip_if_set = false }
